--- a/text_prototype.html
+++ b/text_prototype.html
@@ -1,41 +1,18 @@
-
-  <h1>Bem-Aventuranças - Mateus 5.1-12</h1>
-
-  <p><strong>Bem-aventurado</strong>, no grego, é “Makarios”. Ela tem o sentido de felicidade genuína ou agraciado por Deus. O lugar que ela é mais conhecida é no <strong>Sermão do Monte</strong>. Jesus a usou para nos dar o verdadeiro manual da felicidade Cristã.</p>
-
-  <p>Contudo isso, Jesus foi em contraposição à felicidade mundana, onde festas, bebidas, dinheiro, luxúria e orgulho são felicidade. O feliz é o que chora? É o pobre? É o perseguido? Ele nos mostra que o verdadeiro regozijo está na total dependência de Deus em nossas vidas, além da mansidão, integridade e a busca constante pela justiça divina.</p>
-
-  <h2>“Bem-aventurados os pobres em espírito, porque deles é o reino dos céus”</h2>
-  <p>A palavra pobre, do grego, pode ser vista de duas formas: “Penes”, que significa uma pessoa pobre que tem o básico, e “ptochós”, que significa um pobre que vive na miséria. Jesus utiliza “ptochós”, que sugere uma ideia de miséria espiritual. Bem-aventurados são os miseráveis de espírito, ou seja, felizes aqueles que têm uma extrema necessidade de Deus.</p>
-  <p>Pobres em espírito são aqueles que reconhecem a sua miséria espiritual. Em Lucas 18.10-14 vemos essa atitude na oração do publicano. Para uma verdadeira conversão, a pessoa precisa negar a si mesmo, carregar sua cruz e nascer de novo (Lucas 9.23-26). É esvaziar-se e se entregar a Deus.</p>
-
-  <h2>“Bem-aventurados os que choram, pois eles serão consolados”</h2>
-  <p>A palavra usada é πενθέω (penthéō), que significa lamentar. Refere-se ao choro pela consciência do pecado. Também não é um choro falso, mas sincero. Assim choraram Jó, Jeremias e Ester. Deus não rejeita esse choro sincero. Ele consola com paz e graça verdadeira.</p>
-
-  <h2>“Bem-aventurados os mansos, pois deles é o reino de Deus”</h2>
-  <p>Ser manso é agir com paciência diante de agressões. É ser humilde de coração. Jesus nos convida a agir pacificamente, mesmo diante das injustiças. Os judeus esperavam um Messias guerreiro, mas Jesus veio com mansidão.</p>
-
-  <h2>“Bem-aventurados os que têm fome e sede de justiça, porque eles serão fartos”</h2>
-  <p>Fome e sede indicam anseio profundo. A justiça aqui é conduta correta, santidade. Quem busca isso com sinceridade, receberá de Deus aquilo que deseja. Calvino afirma que o arrependimento verdadeiro leva ao desejo de ser santo.</p>
-
-  <h2>“Bem-aventurados os misericordiosos, porque alcançarão misericórdia”</h2>
-  <p>Misericórdia, do grego éλεος (eleos), significa compaixão. Inclinar-se ao sofrimento do outro. Não apenas amigos ou familiares, mas até inimigos. A promessa é que Deus também será misericordioso com quem assim age.</p>
-
-  <h2>“Bem-aventurados os puros de coração, porque verão a Deus”</h2>
-  <p>Pureza é integridade. Coração puro é indivisível. Deus valoriza mais um coração limpo do que uma aparência bonita. Um coração puro é sincero, íntegro e inteiro para Deus.</p>
-
-  <h2>“Bem-aventurados os pacificadores, porque serão chamados filhos de Deus”</h2>
-  <p>Pacificadores promovem a paz entre pessoas e com Deus. Respondem ao ódio com amor. Eles refletem o caráter de Deus na terra. Por isso são chamados filhos Dele.</p>
-
-  <h2>“Bem-aventurados os perseguidos por causa da justiça…”</h2>
-  <p>Os perseguidos por Cristo são felizes. Mesmo insultados, são prometidos com grande galardão nos céus. Mesmo no Brasil, a rejeição existe. Mas devemos defender nossa fé com mansidão e confiar na ação do Espírito Santo.</p>
-
-  <h2>Conclusão</h2>
-  <p>A verdadeira felicidade está em depender 100% de Deus. As bem-aventuranças são um manual do caráter de Cristo. A mais importante é ser pobre em espírito, pois dela decorrem as outras. Devemos nos entregar totalmente a Deus.</p>
-
+<h1>Você Crê em Jesus Cristo?</h1>
+  
+  <p>
+    Você já ouviu muito por aí que basta crer em Jesus Cristo e será salvo. Essa frase já foi repetida tantas vezes – principalmente na vida de um cristão – que muitos não sentem mais o peso que ela tem. O termo principal dessa frase é a palavra <strong>crer</strong>, mas o que realmente a Bíblia quer nos dizer com isso?
+  </p>
+  <p>
+    A palavra <strong>crer</strong> tem origem no latim (<em>credere</em>) e significa tomar como verdadeiro, acreditar, confiar em, aceitar como verdadeiras palavras ou manifestações. Quando vamos para o escrito original (grego: "<em>pisteuõ</em>", hebraico: <em>aman</em>), nos deparamos com significados como: ter fé, depositar confiança, fidelidade, firmeza. Ou seja, para que creiamos em Jesus, é preciso que depositemos toda a nossa confiança Nele. Veja que, nos escritos originais, encontramos significados que nos demandam relacionamento fiel com Deus para acreditar. Então, chegamos à conclusão de que crer não depende só de confessarmos algo com a boca ou acreditarmos só com a nossa mente, mas sim, com todo o nosso ser, por meio de um bom relacionamento com Ele.
+  </p>
   <blockquote>
-    <p>“Rogo-vos, pois, irmãos, pelas misericórdias de Deus, que apresentei o vosso corpo por sacrifício vivo, santo e agradável a Deus, que é o vosso culto racional.” (Rm 12.1)</p>
+    <strong>Romanos 10:9-10</strong><br>
+    "Se com a boca você confessar Jesus como Senhor e em seu coração crer que Deus o ressuscitou dentre os mortos, você será salvo. Porque com o coração se crê para a justiça e com a boca se confessa para a salvação."
   </blockquote>
-
-  <p>Portanto, ser bem-aventurado é dar sua vida a Deus. Fazendo isso, o caráter de Cristo emana por meio do Espírito Santo.</p>
-
+  <p>
+    Nessa passagem, Paulo vem nos falando, em versículos anteriores, sobre o fim da lei, que é Cristo, para a justiça de todo aquele que crê. Depois disso, nos deparamos com ele nos explicando como crer. Ele nos ensina a crer com a boca e com o coração, dizendo que com o coração se confia, tem fidelidade e firmeza para a justiça, e com a boca se confessa o nome do Senhor para a salvação. Veja que, para crer, precisamos de duas coisas complementares: o coração – o centro das emoções – e a boca – para que possamos confessar aquilo de que o nosso coração está cheio.
+  </p>
+  <p>
+    Concluímos aqui que, para sermos salvos, precisamos nos firmar na morte e ressurreição de Jesus, aceitando e praticando seus ensinamentos, transformando todo o nosso ser e nos entregando inteiramente a Deus. Depois, com alegria e entusiasmo, confessamos o nome d'Ele a todas as nações.
+  </p>
